fix(ui): seed the JVM-args builder from the instance's stored args, not the default preset
The builder opened from JvmArgsPresets.default.config every time, so it never reflected an instance's saved jvmArgs -- reopening the editor discarded whatever the user had, and Apply overwrote the stored string with the preset. That is why a passthrough flag like -Dcustomskinloader.ignorePatchFailure=true kept vanishing.

JvmConfig.fromArgs parses a stored args string back into the structured model: recognized -XX flags map onto their fields (GC-aware, so a G1 knob under ZGC is not double-emitted), and every token the builder does not model -- -D..., -X..., agent flags -- is kept verbatim in the Custom tab. PackRuntimeSection now seeds the dialog from runtime.jvmArgs, falling back to the default preset only when the instance has none. A preset plus passthrough flags round-trips exactly (tested across every preset); a sparse hand-written set is normalized up to the matched GC's baseline while its passthrough flags still survive.